...
                onPressed: () {
                  Navigator.of(context).push(
                    MaterialPageRoute(builder: (context) => ForgetPassword()),
                  );
                },
                child: const Text(
                  'Forgot Password',
                ),
              ),
              Container(
                height: 50,
                padding: const EdgeInsets.fromLTRB(10, 0, 10, 0),
                child: ElevatedButton(
                  child: const Text('Login'),
                  onPressed: () async {
                    if (_formKey.currentState!.validate()) {
                      User? user = await FireAuth.signInUsingEmailPassword(
                        email: _emailController.text,
                        password: _passwordController.text,
                      );
...
