...
                  fontSize: 30),
            ),
          ),
          Container(
            padding: const EdgeInsets.all(10),
            child: TextFormField(
              key: Key("resetEmail"),
              controller: _emailController,
              decoration: const InputDecoration(
                border: OutlineInputBorder(),
                labelText: 'NUS Email',
              ),
              validator: (value) => Validator.validateEmail(email: value),
...
